--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "type": "library",
     "require": {
         "php": "^7.0.0",
-        "phpmd/phpmd": "^2.8"
+        "illuminate/support": "^5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpmd/phpmd": "^2.8"
     },
     "license": "GPL-3.0-or-later",
     "keywords": [
