--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": "^7.0.0",
-        "illuminate/support": "^5.6.0"
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
@@ -31,6 +31,16 @@
     "autoload-dev": {
         "psr-4": {
             "Cosninix\\Sin\\Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Cosninix\\Sin\\SinServiceProvider"
+            ],
+            "aliases": {
+                "Sin": "Cosninix\\Sin\\SinFacade"
+            }
         }
     },
     "scripts": {
