--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
+        "orchestra/testbench": "^3.4",
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpmd/phpmd": "^2.8"
@@ -39,7 +40,7 @@
                 "Cosninix\\Sin\\SinServiceProvider"
             ],
             "aliases": {
-                "Sin": "Cosninix\\Sin\\SinFacade"
+                "Sin": "Sin"
             }
         }
     },
