--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /vendor/
+build/
+.idea/
 node_modules/
 npm-debug.log
 yarn-error.log
+composer.lock
 
 # Laravel 4 specific
 bootstrap/compiled.php
