--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ build/
 node_modules/
 npm-debug.log
 yarn-error.log
-composer.lock
+# include composer.lock for CI to work
+# composer.lock
 
 # Laravel 4 specific
 bootstrap/compiled.php
