--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Simple internationalization for Laravel",
     "type": "library",
     "require": {
-        "php": "^7.0.0",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0"
+        "php": "^7|^8",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.4",
