--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "require": {
         "php": "^7|^8",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.4",
-        "phpunit/phpunit": "^7.5",
+        "orchestra/testbench": "*",
+        "phpunit/phpunit": "^9.6",
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpmd/phpmd": "^2.8"
     },
