--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
     - name: Run test suite
       run: composer run-script test
 
-    - name: Run phpmd code smell
-      run: composer run-script smell
+    #- name: Run phpmd code smell
+    # run: composer run-script smell
 
     - name: Run php-cs-fixer
       run: composer run-script fix
