--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
     #- name: Run phpmd code smell
     # run: composer run-script smell
 
-    - name: Run php-cs-fixer
-      run: composer run-script fix
+    #- name: Run php-cs-fixer
+    #  run: composer run-script fix
 
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
